IDI-46: Fix to alignment of institution list and contact info on front page.

--- a/style.css
+++ b/style.css
@@ -112,7 +112,8 @@ h3,
     margin-bottom: 0.625em;
     font-style: italic;
 }
-.idi-box .idi-box-text {
+.idi-box .idi-box-text,
+.idi-box.idi-box-text {
     padding: 20px;
 }
 .idi-highlight-box {
